--- a/leador_msgs/CMakeLists.txt
+++ b/leador_msgs/CMakeLists.txt
@@ -6,7 +6,8 @@ find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
 add_message_files(
   DIRECTORY msg
   FILES
-  ImuMsg.msg)
+  ImuMsg.msg
+  NaviMsg.msg)
 
 generate_messages(DEPENDENCIES std_msgs)
 
